<resources>
    <string name="easer">Easer</string>
    <string name="app_name" translatable="false">@string/easer</string>
    <string name="drawer_tip">Ease your life!</string>
    <string name="title_outline">Outline</string>
    <string name="title_operation">Operation</string>
    <string name="title_profile">Profile</string>
    <string name="title_event">Event</string>
    <string name="title_script">Script</string>
    <string name="title_condition">Condition</string>
    <string name="title_application">App</string>
    <string name="title_activity_history">Activity History</string>
    <string name="title_about">About</string>
    <string name="title_setting">Settings</string>
    <string name="title_add">Add</string>
    <string name="title_edit">Edit</string>
    <string name="title_delete">Delete</string>
    <string name="title_edit_event">Edit Event</string>
    <string name="title_edit_condition">Edit Condition</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_select_operation">Select an Operation</string>
    <string name="title_dynamics_link">Dynamics Link</string>
    <string name="title_new_dynamics_link">New Dynamics Link</string>
    <string name="title_trigger_profile">Trigger this Profile</string>
    <string name="title_remote_operation_plugin">Remote Operation Plugin</string>
    <string name="menu_start">Start</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_action_save">Save</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_tree_list">Tree List</string>
    <string name="menu_plain_list">Plain List</string>
    <string name="service_indicator_positive">Running</string>
    <string name="service_indicator_negative">Not running</string>
    <string name="activity_history__profile">@string/title_profile</string>
    <string name="activity_history__script">@string/title_script</string>
    <string name="activity_history__time">Time</string>
    <string name="activity_history__extra">Extra info</string>
    <string name="activity_history__satisfaction">Status</string>
    <string name="activity_history__satisfied">Satisfied</string>
    <string name="activity_history__unsatisfied">Unsatisfied</string>
    <string name="activity_history__service">Service</string>
    <string name="activity_history__status">Status</string>
    <string name="activity_history__start">Start</string>
    <string name="activity_history__stop">Stop</string>
    <string name="null_content">NULL CONTENT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="button_read_next_time">Read next time</string>
    <string name="button_understand">Understood</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="text_lack_permission">Easer does NOT have all permissions it needs.</string>
    <string name="button_request_permission">Grant permissions</string>
    <string name="text_notification_running_indicator_content">%s is running in the background</string>
    <string name="text_title">Title</string>
    <string name="text_parent_node">Parent</string>
    <string name="text_parent">Parent</string>
    <string name="text_profile">Profile</string>
    <string name="text_predefined_event">Predefined Event</string>
    <string name="text_inline_event">Inline Event</string>
    <string name="text_use_condition">Use Condition</string>
    <string name="text_repeatable_desc">Repeatable when satisfied</string>
    <string name="text_reverse_desc">Reverse Scenario</string>
    <string name="text_volatile">Volatile</string>
    <string name="text_persistent">Persistent</string>
    <string name="text_dynamics">Dynamics</string>
    <string name="text_placeholder">Placeholder</string>
    <string name="toggle_active">Active</string>
    <string name="hint_event_title">event title</string>
    <string name="hint_script_title">script title</string>
    <string name="hint_profile_title">profile title</string>
    <string name="hint_condition_title">condition title</string>
    <string name="prompt_save_failed">Failed to save</string>
    <string name="prompt_delete">Are you sure to delete: %s?</string>
    <string name="prompt_delete_failed">Failed to delete. Check if this item is being used.</string>
    <string name="prompt_data_illegal">Prevented saving data with invalid field(s). Please recheck your choices / inputs.</string>
    <string name="prompt_prevented_for_permission">Easer needs permission &lt;%s&gt; for this function.</string>
    <string name="appInformation">Ease your life by automatically performing routine actions / operations on your phone(s).\n
Chain different events and let their corresponding actions performed. No longer need to keep them in mind!\n
This app was inspired by CyanogenMod\'s \'profile\' mechanism and IFTTT. The original intuition was to automatically change the profile on certain time or specific WiFi connections, and it was expanded for more general use then.\n
Reminder: Easer is still in development. It may contain bugs and the UI definitely needs to be improved. Current plans are described in the TODO.en.md (or TODO.md if you can read Chinese) document in the repo. If you are interested, please have a look.</string>
    <string name="liscence_stringa">This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.</string>
    <string name="liscence_stringb">This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.</string>
    <string name="liscence_stringc">You should have received a copy of the GNU General Public License
    along with this program.  If not, see http://www.gnu.org/licenses/</string>
    <string name="myGithub" translatable="false">https://github.com/renyuneyun/Easer</string>
    <string name="myWebsite" translatable="false">http://renyuneyun.is-programmer.com/</string>
    <string name="pref_category_functionality">Functionality</string>
    <string name="pref_category_personalise">Personalise</string>
    <string name="pref_category_data_manage">Manage data</string>
    <string name="pref_category_service">Service</string>
    <string name="pref_autostart_title">Autostart on boot</string>
    <string name="pref_autostart_summary">Start Easer background service automatically</string>
    <string name="pref_restart_after_upgrade_title">Start service after upgrade</string>
    <string name="pref_welcome_title">Show welcome message</string>
    <string name="pref_welcome_summary">Show welcome message on app startup</string>
    <string name="pref_logging_title">Enable external logging</string>
    <string name="pref_logging_summary">Save logs to external storage devices (/sdcard/logger) to aid bug reports.\nChange of this setting will take effect from next time Easer starts.</string>
    <string name="pref_use_root_title">Use root features</string>
    <string name="pref_use_root_summary">Use root permission for specific functions (plugins), which may help resolve compatibility issue on some devices. Root permission won\'t be used elsewhere.</string>
    <string name="pref_cooldown_title">Cool down time</string>
    <string name="pref_cooldown_summary">Minimal interval between two triggers of the same event</string>
    <string name="cooldown_time_illformed">The number must not be lower than 0 and not too large to fit in a integer</string>
    <string name="pref_passive_mode_title">Passive mode</string>
    <string name="pref_passive_mode_summary_on">Listen to Event; no checking when activated</string>
    <string name="pref_passive_mode_summary_off">Check the satisfaction state when (each) Event is activated</string>
    <string name="pref_enabled_plugins_title">Enabled plugins</string>
    <string name="pref_enabled_plugins_summary">Enable or disable certain plugins</string>
    <string name="pref_use_12_hour_clock_title">Use 12-hour clock</string>
    <string name="pref_export_title">Export</string>
    <string name="pref_export_summary">Export all events and profiles to SD Card.\nFile will be named after current time.</string>
    <string name="pref_import_title">Import</string>
    <string name="pref_import_summary">Import all events and profiles in a zip file.\nExisting events and profiles with same name will be replaced.</string>
    <string name="pref_convert_data_title">Convert data</string>
    <string name="pref_convert_data_summary">Convert all data to the recommended format</string>
    <string name="pref_show_notification_title">Show notification</string>
    <string name="pref_show_notification_summary">Show a notification in the notification bar.</string>
    <string name="pref_foreground_title">Run service in foreground</string>
    <string name="pref_foreground_summary">Make the service less easier to be killed by the system. Will show a notification. Can not be disabled on Android 8+ because of system requirement.</string>
    <string name="message_plugin_not_compatible">This plugin is not compatible with this device.</string>
    <string name="message_convert_data_start">Converting data.</string>
    <string name="message_convert_data_finish">Converted data.</string>
    <string name="message_convert_data_abort">Convert data aborted.</string>
    <string name="message_convert_data_error">Error occurred when converting data. Please see the log for details.</string>
    <string name="title_welcome_message">Welcome</string>
    <string name="welcome_message">Welcome to use Easer!
        \nHope you like this app :)
        \n\nPlease read these before starting:\n
    1. Please grant Easer corresponding permissions before using relevant events and profiles.\n
    2. Connecting events as <a href="https://en.wikipedia.org/wiki/Tree_structure">trees</a> is CURRENTLY the only way to compose events.
        \n\nAlso have a look at <a href="https://github.com/renyuneyun/Easer/wiki/FAQ">FAQ</a> in the project wiki.</string>
    <string name="welcome_message_1">
        Welcome to Easer!
        \n\nThe welcome pages have some basic information.
        \n\nPlease read before use.
        \n
        \n\nBetter to have a look at <a href="https://github.com/renyuneyun/Easer/wiki/FAQ">FAQ</a> in the project wiki.
    </string>
    <string name="welcome_message_2">
        Easer contains several modules to provide different functions. You can enable/disable them in Settings.
        \n\nThe corresponding permissions (for every enabled module) should be granted before use.
        \n
        \n\n(Everything is enabled by default.)
    </string>
    <string name="welcome_message_3">
        Scripts are structured as <a href="https://en.wikipedia.org/wiki/Tree_structure">trees</a>, by choosing the relevant "parent".
        \n\nIn every branch, "AND" logic is performed.
        \nBetween branches, "OR" logic is performed.
        \n
        \n\nExtending trees to graphs is planned, but not currently implemented.
    </string>
    <string name="title_welcome_message_privacy">
        Privacy!
    </string>
    <string name="welcome_message_privacy">
        Privacy is important!
        \n\nEaser is a <a href="https://en.wikipedia.org/wiki/Free_software">free software</a> (open-source software), ensuring everyone can inspect the code.
        \n\nYOU own every piece of your data. Everything lives on your device, including the logs.
    </string>
    <string name="alert_update_storage_data_title">Old data version found</string>
</resources>