<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_outline"
            android:title="@string/title_outline" />
        <item
            android:id="@+id/nav_pivot"
            android:title="@string/title_pivot" />
        <item
            android:id="@+id/nav_data"
            android:title="@string/title_data_collection" />
    </group>

    <item android:title="@string/title_application">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_log"
                    android:title="@string/title_activity_history" />
            </group>
            <item
                android:id="@+id/nav_setting"
                android:title="@string/title_setting" />
            <item
                android:id="@+id/nav_about"
                android:title="@string/title_about" />
        </menu>
    </item>

</menu>
