<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

                <TableRow
                    android:id="@+id/c_script"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="3dp"
                        android:text="@string/activity_history__script" />

                    <TextView
                        android:id="@+id/tv_script"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="3dp" />
                </TableRow>

                <TableRow
                    android:id="@+id/c_service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="3dp"
                        android:text="@string/activity_history__service" />

                    <TextView
                        android:id="@+id/tv_service"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="3dp" />
                </TableRow>

                <TableRow
                    android:id="@+id/c_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="3dp"
                        android:text="@string/activity_history__status" />

                    <TextView
                        android:id="@+id/tv_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="3dp" />
                </TableRow>

                <TableRow
                    android:id="@+id/c_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="3dp"
                        android:text="@string/activity_history__profile" />

                    <TextView
                        android:id="@+id/tv_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="3dp" />
                </TableRow>

                <TableRow
                    android:id="@+id/c_extra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="3dp"
                        android:text="@string/activity_history__extra" />

                    <TextView
                        android:id="@+id/tv_extra"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="3dp" />
                </TableRow>

                <TableRow
                    android:id="@+id/c_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="3dp"
                        android:text="@string/activity_history__time" />

                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="3dp" />
                </TableRow>

            </TableLayout>

        </FrameLayout>
    </ScrollView>
</layout>
